# sys-gen

./: .gitignore  Cargo.toml  README.md  sys.yaml
src/: main.rs  types.rs
src/generators/: js.rs  mod.rs  rs.rs  ts.rs
src/generators/rs/: args.rs  effect.rs  rs_return.rs
src/project_files/: Cargo.toml  package.json
sys-gen/: Cargo.toml
sys-gen/src/: lib.rs  main.rs  types.rs  validator.rs
sys-gen/src/generators/: mod.rs
sys-gen/src/generators/rs/: args.rs  effect.rs
syscall/: Cargo.toml  build.rs  package.json  pnpm-lock.yaml
