[package]
name = "sys-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_yaml = "*"
common_macros = "*"
uuid = { version = "1.0.0-alpha.1", features = ["v4"] }
