[package]
name = "sys-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sys_gen_bin"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_yaml = "*"
common_macros = "*"
uuid = { version = "1.0.0-alpha.1", features = ["v4"] }
anyhow = "1.0.56"
thiserror = "1.0.30"
